; ModuleID = '/home/carl/AnghaBench/linux/drivers/bluetooth/extr_btmrvl_sdio.c_btmrvl_sdio_verify_fw_download.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/bluetooth/extr_btmrvl_sdio.c_btmrvl_sdio_verify_fw_download.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btmrvl_sdio_card = type { i32 }

@FIRMWARE_READY = common dso_local global i64 0, align 8
@ETIMEDOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.btmrvl_sdio_card*, i32)* @btmrvl_sdio_verify_fw_download to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @btmrvl_sdio_verify_fw_download(%struct.btmrvl_sdio_card* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.btmrvl_sdio_card*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.btmrvl_sdio_card* %0, %struct.btmrvl_sdio_card** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %7, align 4
  br label %9

9:                                                ; preds = %34, %2
  %10 = load i32, i32* %7, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %37

13:                                               ; preds = %9
  %14 = load %struct.btmrvl_sdio_card*, %struct.btmrvl_sdio_card** %4, align 8
  %15 = getelementptr inbounds %struct.btmrvl_sdio_card, %struct.btmrvl_sdio_card* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @sdio_claim_host(i32 %16)
  %18 = load %struct.btmrvl_sdio_card*, %struct.btmrvl_sdio_card** %4, align 8
  %19 = call i32 @btmrvl_sdio_read_fw_status(%struct.btmrvl_sdio_card* %18, i64* %6)
  store i32 %19, i32* %8, align 4
  %20 = load %struct.btmrvl_sdio_card*, %struct.btmrvl_sdio_card** %4, align 8
  %21 = getelementptr inbounds %struct.btmrvl_sdio_card, %struct.btmrvl_sdio_card* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @sdio_release_host(i32 %22)
  %24 = load i32, i32* %8, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %13
  br label %34

27:                                               ; preds = %13
  %28 = load i64, i64* %6, align 8
  %29 = load i64, i64* @FIRMWARE_READY, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %32

31:                                               ; preds = %27
  store i32 0, i32* %3, align 4
  br label %40

32:                                               ; preds = %27
  %33 = call i32 @msleep(i32 100)
  br label %34

34:                                               ; preds = %32, %26
  %35 = load i32, i32* %7, align 4
  %36 = add nsw i32 %35, 1
  store i32 %36, i32* %7, align 4
  br label %9

37:                                               ; preds = %9
  %38 = load i32, i32* @ETIMEDOUT, align 4
  %39 = sub nsw i32 0, %38
  store i32 %39, i32* %3, align 4
  br label %40

40:                                               ; preds = %37, %31
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i32 @sdio_claim_host(i32) #1

declare dso_local i32 @btmrvl_sdio_read_fw_status(%struct.btmrvl_sdio_card*, i64*) #1

declare dso_local i32 @sdio_release_host(i32) #1

declare dso_local i32 @msleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
